--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -25,5 +25,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: |
+           cd apis/userprofile
+           npm install
     - run: npm run test
