--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -28,4 +28,6 @@ jobs:
     - run: |
            cd apis/userprofile
            npm install
-    - run: npm run test
+    - run: |
+           cd apis/userprofile
+           npm run test
