--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -8,7 +8,9 @@ on:
   #   branches: [ master ]
   pull_request:
     branches: [ master ]
-    paths: 'apis/userprofile/**'
+    paths: 
+      - 'apis/userprofile/**'
+      - '.github/workflows/userprofile.yml'
     
 jobs:
   build:
