--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -22,4 +22,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run:  cd apis/user-java
+            mvn -B package --file pom.xml
