--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -23,6 +23,8 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
+      run:   |
+           cd apis/poi
+           dotnet build --configuration Release --no-restore
+        - name: Test
       run: dotnet test --no-restore --verbosity normal
