--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -22,5 +22,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run:  cd 'apis/user-java'
-            mvn -B package --file pom.xml
+      run:  mvn -B package --file apis/user-java/pom.xml
