--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: apis/poi
 
     steps:
     - uses: actions/checkout@v2
@@ -23,8 +25,8 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run:   |
-           cd apis/poi
-           dotnet build --configuration Release --no-restore
-        - name: Test
+      run: dotnet build --configuration Release --no-restore
+    - working-directory: ${{env.working-directory}} 
+      name: Test
       run: dotnet test --no-restore --verbosity normal
+
