--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v .
+      run: go run main.go
 
     - name: Test
-      run: go test -v .
+      run: go test
