--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -49,8 +49,8 @@ jobs:
       uses: docker/build-push-action@v1
       with:
         workdir: apis/userprofile
-        context: apis/userprofile
-        file: apis/userprofile/Dockerfile
+        context: .
+        file: ./Dockerfile
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: docker.pkg.github.com
