--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -6,11 +6,11 @@ on:
   pull_request:
     branches: [ master ]
     paths: 
-      - 'apis/poi/**'
-      - '.github/workflows/poi.yml'
+      - apis/poi/**
+      - .github/workflows/poi.yml
 
 jobs:
-  build:
+  build_and_test:
 
     runs-on: ubuntu-latest
     env:
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore ./api/poi/poi.sln
     - working-directory: ${{env.working-directory}} 
       name: Test
       run: dotnet test --no-restore --verbosity normal
