--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -23,3 +23,4 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run:  mvn -B package --file apis/user-java/pom.xml
+            mvn test
