--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -48,9 +48,8 @@ jobs:
     - name: Push to GitHub Packages
       uses: docker/build-push-action@v1
       with:
-        # workdir: /github/workspace/apis/userprofile
-        context: /github/workspace/apis/userprofile
-        file: /github/workspace/apis/userprofile/Dockerfile
+        context: apis/userprofile
+        file: apis/userprofile/Dockerfile
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: docker.pkg.github.com
