--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -24,6 +24,8 @@ jobs:
         dotnet-version: 3.1.301
     - name: Install dependencies
       run: dotnet restore
+    - name: show folder
+      run: pwd
     - name: Build
       run: dotnet build --configuration Release --no-restore apis/poi/poi.sln
     - working-directory: ${{env.working-directory}} 
