--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -22,8 +22,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    - name: Install dependencies
-      run: dotnet restore
+#    - name: Install dependencies
+#      run: dotnet restore
     - name: show folder
       run: pwd
     - name: Build
