Proper namespace for image

--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -50,7 +50,7 @@ jobs:
         cd apis/userprofile
         docker login docker.pkg.github.com --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
         docker build -t cdennig/openhackteam4/userprofile:${{ github.sha }} .
-        docker push cdennig/openhackteam4/userprofile:${{ github.sha }}
+        docker push docker.pkg.github.com/cdennig/openhackteam4/userprofile:${{ github.sha }}
     # - name: Push to GitHub Packages
     #   uses: docker/build-push-action@v1
     #   with:
