--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -24,13 +24,13 @@ jobs:
         dotnet-version: 3.1.301
     - name: show folder
       run: pwd
-    - working-directory: ${{env.working-directory}}
+#    - working-directory: ${{env.working-directory}}
     - name: Install dependencies
       run: dotnet restore
-    - working-directory: ${{env.working-directory}}
+#    - working-directory: ${{env.working-directory}}
     - name: Build
       run: dotnet build --configuration Release --no-restore apis/poi/poi.sln
-    - working-directory: ${{env.working-directory}} 
+#    - working-directory: ${{env.working-directory}} 
       name: Test
       run: dotnet test --no-restore --verbosity normal
 
