--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -31,6 +31,6 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore apis/poi/poi.sln
 #    - working-directory: ${{env.working-directory}} 
-      name: Test
+    - name: Test
       run: dotnet test --no-restore --verbosity normal
 
