--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -26,7 +26,7 @@ jobs:
       run: pwd
 #    - working-directory: ${{env.working-directory}}
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore apis/poi/web/poi.csproj
 #    - working-directory: ${{env.working-directory}}
     - name: Build
       run: dotnet build --configuration Release --no-restore apis/poi/poi.sln
