--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore apis/poi/web/poi.csproj
 #    - working-directory: ${{env.working-directory}}
     - name: Build
-      run: dotnet build --configuration Release --no-restore apis/poi/poi.sln
+      run: dotnet build --configuration Release --no-restore apis/poi/web/poi.csproj
 #    - working-directory: ${{env.working-directory}} 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
