--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -32,5 +32,5 @@ jobs:
       run: dotnet build --configuration Release --no-restore apis/poi/web/poi.csproj
 #    - working-directory: ${{env.working-directory}} 
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore --verbosity normal apis/poi/tests/UnitTests/UnitTests.csproj
 
