--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -22,5 +22,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build_and_Test_with_Maven
-      run:  mvn -B package --file apis/user-java/pom.xml ;
-            mvn test --file apis/user-java/pom.xml
+      run: |
+        mvn -B package --file apis/user-java/pom.xml ;
+        mvn test --file apis/user-java/pom.xml
