--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -69,7 +69,7 @@ jobs:
              },
              {
                  "name": "DOCKER_REGISTRY_SERVER_URL",
-                 "value": "docker.pkg.github.com",
+                 "value": "https://docker.pkg.github.com",
                  "slotSetting": false
              },
              {
