--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -64,7 +64,7 @@ jobs:
          [
              {
                  "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
-                 "value": "${{ secrets.GITHUB_TOKEN }}",
+                 "value": "${{ secrets.PULL_PWD }}",
                  "slotSetting": false
              },
              {
