--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -23,8 +23,9 @@ jobs:
         java-version: 1.8
     - name: Build_and_Test_with_Maven
       run: |
-        mvn -B package --file apis/user-java/pom.xml ;
-        mvn test --file apis/user-java/pom.xml
+        cd apis/user-java
+        mvn -B package --file pom.xml
+        mvn test --file pom.xml
     - uses: actions/github-script@0.9.0
       if: failure()
       with:
