--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -50,6 +50,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
         working-directory: ./apis/userprofile
+        app-name: openhackf4r03460userprofile
+        image-name: userprofile
     if: github.ref == 'refs/heads/master'
     steps:
     - uses: actions/checkout@v2    
@@ -57,8 +59,8 @@ jobs:
       working-directory: ${{ env.working-directory }}
       run: |
         docker login docker.pkg.github.com --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
-        docker build -t docker.pkg.github.com/cdennig/openhackteam4/userprofile:${{ github.sha }} .
-        docker push docker.pkg.github.com/cdennig/openhackteam4/userprofile:${{ github.sha }}
+        docker build -t docker.pkg.github.com/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }} .
+        docker push docker.pkg.github.com/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
@@ -66,7 +68,7 @@ jobs:
     - name: Set Web App CR authentication
       uses: Azure/appservice-settings@v1
       with:
-       app-name: 'openhackf4r03460userprofile'
+       app-name: ${{ env.app-name }}
        app-settings-json: |
          [
              {
@@ -87,9 +89,9 @@ jobs:
          ]
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'openhackf4r03460userprofile'
+        app-name: ${{ env.app-name }}
         # slot-name: 'staging'
-        images: 'docker.pkg.github.com/cdennig/openhackteam4/userprofile:${{ github.sha }}'
+        images: 'docker.pkg.github.com/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
     # - name: Swap slots
     #   uses: azure/CLI@v1
     #   with:
