--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Test
       run: |
-        cd apis/trips
+        cd apis/trips/tests
         go test
     - uses: actions/github-script@0.9.0
       if: failure()
