--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,11 @@
 name: Go
 
 on:
+  push:
+    branches: [ master ]
+    paths: 
+      - 'apis/trips/**'
+      - '.github/workflows/go.yml'
   pull_request:
     branches: [ master ]
     paths: 
@@ -9,7 +14,8 @@ on:
 
 jobs:
 
-  build:
+  test:
+
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +45,7 @@ jobs:
 
     - name: Test
       run: |
-        cd apis/trips/tests
+        cd apis/trips
         go test
     - uses: actions/github-script@0.9.0
       if: failure()
@@ -53,3 +59,58 @@ jobs:
             title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
             body: body
           });
+  build:
+    needs: [test]
+    runs-on: ubuntu-latest
+    env:
+        working-directory: ./apis/trips
+        app-name: openhackf4r03460trips
+        image-name: trips
+        container-registry: docker.pkg.github.com
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/checkout@v2    
+    - name: Build & Push Image
+      working-directory: ${{ env.working-directory }}
+      run: |
+        docker login ${{ env.container-registry }} --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+        docker build -t ${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }} .
+        docker push ${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Set Web App CR authentication
+      uses: Azure/appservice-settings@v1
+      with:
+       app-name: ${{ env.app-name }}
+       app-settings-json: |
+         [
+             {
+                 "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
+                 "value": "${{ secrets.PULL_PWD }}",
+                 "slotSetting": false
+             },
+             {
+                 "name": "DOCKER_REGISTRY_SERVER_URL",
+                 "value": "https://${{ env.container-registry }}",
+                 "slotSetting": false
+             },
+             {
+                 "name": "DOCKER_REGISTRY_SERVER_USERNAME",
+                 "value": "${{ github.actor }}",
+                 "slotSetting": false
+             }
+         ]
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.app-name }}
+        # slot-name: 'staging'
+        images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
+    # - name: Swap slots
+    #   uses: azure/CLI@v1
+    #   with:
+    #     azcliversion: 2.11.1
+    #     inlineScript: |
+    #       az webapp deployment slot swap --name openhackf4r03460trips --resource-group openhackf4r03460rg --slot staging --target-slot production
+        
