--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -56,6 +56,7 @@ jobs:
         app-name: openhackf4r03460userprofile
         image-name: userprofile
         container-registry: docker.pkg.github.com
+        docker-username: "cdennig"
     if: github.ref == 'refs/heads/master'
     steps:
     - uses: actions/checkout@v2    
@@ -87,7 +88,7 @@ jobs:
              },
              {
                  "name": "DOCKER_REGISTRY_SERVER_USERNAME",
-                 "value": "${{ github.actor }}",
+                 "value": "${{ env.docker-username }}",
                  "slotSetting": false
              }
          ]
