Update POI deployment

--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -1,8 +1,11 @@
 name: .NET Core
 
 on:
-  # push:
-  #   branches: [ master ]
+  push:
+    branches: [ master ]
+    paths: 
+      - apis/poi/**
+      - .github/workflows/poi.yml
   pull_request:
     branches: [ master ]
     paths: 
@@ -10,7 +13,7 @@ on:
       - .github/workflows/poi.yml
 
 jobs:
-  build_and_test:
+  test:
 
     runs-on: ubuntu-latest
     env:
@@ -45,5 +48,58 @@ jobs:
             title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
             body: body
           });  
-      
-
+  build:
+    needs: [test]
+    runs-on: ubuntu-latest
+    env:
+        working-directory: ./apis/poi/web
+        app-name: openhackf4r03460poi
+        image-name: poi
+        container-registry: docker.pkg.github.com
+        docker-username: "cdennig"
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/checkout@v2    
+    - name: Build & Push Image
+      working-directory: ${{ env.working-directory }}
+      run: |
+        docker login ${{ env.container-registry }} --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+        docker build -t ${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }} .
+        docker push ${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Set Web App CR authentication
+      uses: Azure/appservice-settings@v1
+      with:
+       app-name: ${{ env.app-name }}
+       app-settings-json: |
+         [
+             {
+                 "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
+                 "value": "${{ secrets.PULL_PWD }}",
+                 "slotSetting": false
+             },
+             {
+                 "name": "DOCKER_REGISTRY_SERVER_URL",
+                 "value": "https://${{ env.container-registry }}",
+                 "slotSetting": false
+             },
+             {
+                 "name": "DOCKER_REGISTRY_SERVER_USERNAME",
+                 "value": "${{ env.docker-username }}",
+                 "slotSetting": false
+             }
+         ]
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.app-name }}
+        # slot-name: 'staging'
+        images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
+    # - name: Swap slots
+    #   uses: azure/CLI@v1
+    #   with:
+    #     azcliversion: 2.11.1
+    #     inlineScript: |
+    #       az webapp deployment slot swap --name openhackf4r03460userprofile --resource-group openhackf4r03460rg --slot staging --target-slot production
