--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -74,22 +74,23 @@ jobs:
       uses: Azure/appservice-settings@v1
       with:
        app-name: ${{ env.app-name }}
+       slot-name: 'staging'
        app-settings-json: |
          [
              {
                  "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
                  "value": "${{ secrets.PULL_PWD }}",
-                 "slotSetting": false
+                 "slotSetting": true
              },
              {
                  "name": "DOCKER_REGISTRY_SERVER_URL",
                  "value": "https://${{ env.container-registry }}",
-                 "slotSetting": false
+                 "slotSetting": true
              },
              {
                  "name": "DOCKER_REGISTRY_SERVER_USERNAME",
                  "value": "${{ env.docker-username }}",
-                 "slotSetting": false
+                 "slotSetting": true
              }
          ]
     - uses: azure/webapps-deploy@v2
