--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -114,6 +114,7 @@ jobs:
     #     inlineScript: |
     #       az webapp deployment slot swap --name openhackf4r03460trips --resource-group openhackf4r03460rg --slot staging --target-slot production
   Validate Staging:
+    needs: [build]
     runs-on: ubuntu-latest
     - uses: azure/CLI@v1
       with:
