--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -106,7 +106,7 @@ jobs:
       with:
         app-name: ${{ env.app-name }}
         slot-name: 'staging'
-        images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
+        images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}';
     # - name: Swap slots
     #   uses: azure/CLI@v1
     #   with:
