--- a/.github/workflows/userprofile.yml
+++ b/.github/workflows/userprofile.yml
@@ -57,6 +57,7 @@ jobs:
         image-name: userprofile
         container-registry: docker.pkg.github.com
         docker-username: "cdennig"
+        api-status: Down
     if: github.ref == 'refs/heads/master'
     steps:
     - uses: actions/checkout@v2    
@@ -99,10 +100,22 @@ jobs:
         slot-name: 'staging'
         images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
     - name: Staging healthy?
-      run: ./test.sh https://openhackf4r03460userprofile-staging.azurewebsites.net/api/healthcheck/user
-    # - name: Swap slots
-    #   uses: azure/CLI@v1
-    #   with:
-    #     azcliversion: 2.11.1
-    #     inlineScript: |
-    #       az webapp deployment slot swap --name openhackf4r03460userprofile --resource-group openhackf4r03460rg --slot staging --target-slot production
+      run: |
+        ./test.sh https://openhackf4r03460userprofile-staging.azurewebsites.net/api/healthcheck/user
+    - name: Swap slots
+      if: ${{ success() }}
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.11.1
+        inlineScript: |
+          az webapp deployment slot swap --name openhackf4r03460userprofile --resource-group openhackf4r03460rg --slot staging --target-slot production
+    - name: Production healthy?
+      run: |
+        ./test.sh https://openhackf4r03460userprofile.azurewebsites.net/api/healthcheck/user
+    - name: Rollback
+      if: ${{ failure() }}
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.11.1
+        inlineScript: |
+          az webapp deployment slot swap --name openhackf4r03460userprofile --resource-group openhackf4r03460rg --slot staging --target-slot production
