--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -65,22 +65,23 @@ jobs:
       uses: Azure/appservice-settings@v1
       with:
        app-name: ${{ env.app-name }}
+       slot-name: 'staging'
        app-settings-json: |
          [
              {
                  "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
                  "value": "${{ secrets.PULL_PWD }}",
-                 "slotSetting": false
+                 "slotSetting": true
              },
              {
                  "name": "DOCKER_REGISTRY_SERVER_URL",
                  "value": "https://${{ env.container-registry }}",
-                 "slotSetting": false
+                 "slotSetting": true
              },
              {
                  "name": "DOCKER_REGISTRY_SERVER_USERNAME",
                  "value": "${{ env.docker-username }}",
-                 "slotSetting": false
+                 "slotSetting": true
              }
          ]
     - uses: azure/webapps-deploy@v2
@@ -88,4 +89,4 @@ jobs:
         app-name: ${{ env.app-name }}
         slot-name: 'staging'
         images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
-        
+
