--- a/.github/workflows/poi.yml
+++ b/.github/workflows/poi.yml
@@ -66,6 +66,17 @@ jobs:
         docker login ${{ env.container-registry }} --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
         docker build -t ${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }} .
         docker push ${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}
+  staging:
+    needs: [build]
+    runs-on: ubuntu-latest
+    env:
+        app-name: openhackf4r03460poi
+        image-name: poi
+        container-registry: docker.pkg.github.com
+        docker-username: "cdennig"
+    if: github.ref == 'refs/heads/master'
+    steps:  
+    - uses: actions/checkout@v2  
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
       with:
@@ -98,9 +109,18 @@ jobs:
         app-name: ${{ env.app-name }}
         slot-name: 'staging'
         images: '${{ env.container-registry }}/cdennig/openhackteam4/${{ env.image-name }}:${{ github.sha }}'
-    # - name: Swap slots
-    #   uses: azure/CLI@v1
-    #   with:
-    #     azcliversion: 2.11.1
-    #     inlineScript: |
-    #       az webapp deployment slot swap --name openhackf4r03460userprofile --resource-group openhackf4r03460rg --slot staging --target-slot production
+    - name: Staging healthy?
+      run: |
+        ./test.sh https://openhackf4r03460poi-staging.azurewebsites.net/api/healthcheck/poi
+    - uses: actions/github-script@0.9.0
+      if: failure()
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          let body = "${{ env.build_name }} Worflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+          github.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! Error in staging slot of API.",
+            body: body
+          });
